Add methods to HotelRepository and HotelBookingRepository for active hotel and booking retrieval; update HotelBookingService and HotelService to use new methods